--- a/templates/users/manage_users.html
+++ b/templates/users/manage_users.html
@@ -1,4 +1,4 @@
-{% extends 'users/home.html' %}
+{% extends 'users/Admin_Dashboard_Root.html' %}
 {% load static %}
 {% load i18n %}
 
@@ -6,7 +6,7 @@
 {% trans "Manage Users" %} - {% trans "Hazina ya Vitabu" %}
 {% endblock %}
 
-{% block main_block %}
+{% block admin_dash %}
 <div class="py-8 px-6 md:px-16 {% if theme == 'dark' %}bg-gray-900{% else %}bg-gray-50{% endif %}">
     <!-- Header Section -->
     <header class="mb-8 mt-4 pb-6 border-b-2 {% if theme == 'dark' %}border-blue-400{% else %}border-blue-400{% endif %}">
