Language settings for sw and eng

--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -100,7 +100,7 @@
                 type="submit" 
                 class="w-full bg-blue-600 text-white py-3 rounded-lg hover:bg-blue-700 transition duration-200 font-medium"
             >
-                {% trans "Sign In" %}
+                {% trans "Login" %}
             </button>
         </form>
 
