--- a/templates/users/home.html
+++ b/templates/users/home.html
@@ -193,7 +193,7 @@
             {% if current_tab == 'home' %}
             <li class="relative">
                 <a href="{% url 'home' %}" class="{% if theme == 'dark' %}text-blue-400{% else %}text-blue-500{% endif %}">
-                    <i class="bi bi-house-fill"></i> {% trans "Nyumbani" %}
+                    <i class="bi bi-house-fill"></i> {% trans "Home" %}
                 </a>
                 <!-- Line under the active link -->
                 <span class="absolute left-0 right-0 h-1 {% if theme == 'dark' %}bg-blue-400{% else %}bg-blue-400{% endif %} -bottom-3"></span>
@@ -201,7 +201,7 @@
             {% else %}
             <li>
                 <a href="{% url 'home' %}" class="{% if theme == 'dark' %}hover:text-blue-400 text-blue-300{% else %}hover:text-blue-500 text-blue-900{% endif %} transition duration-300">
-                    <i class="bi bi-house"></i> {% trans "Nyumbani" %}
+                    <i class="bi bi-house"></i> {% trans "Home" %}
                 </a>
             </li>
             {% endif %}
@@ -209,7 +209,7 @@
             {% if current_tab == 'shop' %}
             <li class="relative">
                 <a href="{% url 'shop' %}" class="{% if theme == 'dark' %}text-blue-400{% else %}text-blue-500{% endif %}">
-                    <i class="bi bi-bag-fill"></i> {% trans "Dukani" %}
+                    <i class="bi bi-bag-fill"></i> {% trans "Shop" %}
                 </a>
                 <!-- Line under the active link -->
                 <span class="absolute left-0 right-0 h-1 {% if theme == 'dark' %}bg-blue-400{% else %}bg-blue-400{% endif %} -bottom-3"></span>
@@ -217,7 +217,7 @@
             {% else %}
             <li>
                 <a href="{% url 'shop' %}" class="{% if theme == 'dark' %}hover:text-blue-400 text-blue-300{% else %}hover:text-blue-500 text-blue-900{% endif %} transition duration-300">
-                    <i class="bi bi-bag"></i> {% trans "Dukani" %}
+                    <i class="bi bi-bag"></i> {% trans "Shop" %}
                 </a>
             </li>
             {% endif %}
@@ -227,7 +227,7 @@
         <ul class="flex items-center space-x-4 md:space-x-6">
             <li class="relative">
                 <a href="{% url 'view_cart' %}" class="p-2 rounded-full bg-blue-600 text-white hover:bg-blue-500 hover:text-white transition duration-300" aria-label="{% trans 'View cart' %}">
-                    {% trans "Kitenga" %}
+                    {% trans "Cart" %}
                     <i class="bi bi-cart text-xl"></i>
                     <span id="cart-item-count" class="absolute top-0 right-0 transform translate-x-1/2 -translate-y-1/2 bg-blue-900 text-white text-xs rounded-full px-2">
                         {{ cart_item_count }}
@@ -281,10 +281,40 @@
         <div class="mt-auto p-4">
             <h2 class="text-lg font-semibold mb-2">{% trans "Settings" %}</h2>
             <div class="flex space-x-2 mb-4">
-                <a href="{% url 'set_language' 'en' %}" class="{% if LANGUAGE_CODE == 'en' %}{% if theme == 'dark' %}text-blue-400{% else %}text-blue-600{% endif %} font-bold{% else %}{% if theme == 'dark' %}text-gray-400 hover:text-blue-400{% else %}text-gray-600 hover:text-blue-600{% endif %}{% endif %} text-sm transition duration-300">EN</a>
+                {% load i18n %}
+                <form action="{% url 'set_language' %}" method="post" class="inline">
+                    {% csrf_token %}
+                    <input type="hidden" name="language" value="en">
+                    <input type="hidden" name="next" value="{{ request.path }}">
+                    <button type="submit"
+                    class="text-sm transition duration-300
+                            {% if LANGUAGE_CODE == 'en' %}
+                            {% if theme == 'dark' %}text-blue-400{% else %}text-blue-600{% endif %} font-bold
+                            {% else %}
+                            {% if theme == 'dark' %}text-gray-400 hover:text-blue-400{% else %}text-gray-600 hover:text-blue-600{% endif %}
+                            {% endif %}">
+                    EN
+                    </button>
+                </form>
+
                 <span class="{% if theme == 'dark' %}text-gray-500{% else %}text-gray-400{% endif %}">|</span>
-                <a href="{% url 'set_language' 'sw' %}" class="{% if LANGUAGE_CODE == 'sw' %}{% if theme == 'dark' %}text-blue-400{% else %}text-blue-600{% endif %} font-bold{% else %}{% if theme == 'dark' %}text-gray-400 hover:text-blue-400{% else %}text-gray-600 hover:text-blue-600{% endif %}{% endif %} text-sm transition duration-300">SW</a>
+
+                <form action="{% url 'set_language' %}" method="post" class="inline">
+                    {% csrf_token %}
+                    <input type="hidden" name="language" value="sw">
+                    <input type="hidden" name="next" value="{{ request.path }}">
+                    <button type="submit"
+                    class="text-sm transition duration-300
+                            {% if LANGUAGE_CODE == 'sw' %}
+                            {% if theme == 'dark' %}text-blue-400{% else %}text-blue-600{% endif %} font-bold
+                            {% else %}
+                            {% if theme == 'dark' %}text-gray-400 hover:text-blue-400{% else %}text-gray-600 hover:text-blue-600{% endif %}
+                            {% endif %}">
+                    SW
+                    </button>
+                </form>
             </div>
+
             <button onclick="toggleTheme()" class="p-2 rounded-full {% if theme == 'dark' %}bg-gray-700 text-yellow-400 hover:bg-gray-600{% else %}bg-gray-200 text-gray-700 hover:bg-gray-300{% endif %} transition duration-300" title="{% trans 'Toggle Theme' %}">
                 {% if theme == 'dark' %}
                     <i class="bi bi-sun text-lg"></i>
